@@ -1,8 +1,9 @@
-CHANGES.txt - 2011-01-10
+CHANGES.txt - 2011-01-19
 ------------------------
 
 CHANGES IN CUPS V1.5b1
 
+	- Email notifications did not work on Mac OS X.
 	- The cupstestppd program now shows an error for files missing a
 	  CloseGroup keyword (STR #3668)
 	- Name resolution errors no longer cause queues to stop (STR #3719,
